--- a/index.html
+++ b/index.html
@@ -1,11 +1,461 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-commerce-Website-Design</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <!-- fontawesome cdn For Icons -->
+<link rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
+integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEys
+h0TCVbHJXCLN7WetD8TFecIky75ZfQ=="
+crossorigin="anonymous" />
+
+<link rel="stylesheet" href="style.css">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Hello, world!</title>
+  </head>
+  <body>
+
+
+    <!-- ==============header menu section starts here============== -->
+<section class="header_menu" id="header_menu">
+    <div class="container-fluid px-0 shadow">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light py-3 ">
+    <a class="navbar-brand pl-5 pl-small-0" href="index.html">
+    <img src="assets/logo.jpg" class="img img-fluid" width="50px"
+    alt="logo">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse"
+    data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false"
+    aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mx-auto">
+    <li class="nav-item active">
+    <a class="nav-link" href="index.html">Home <span
+    class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item">
+    <a class="nav-link" href="product.html">Product</a>
+    </li>
+    <li class="nav-item">
+    <a class="nav-link" href="category.html">Category</a>
+    </li>
+    <li class="nav-item">
+    <a class="nav-link" href="about.html">About Us</a>
+    </li>
+    <li class="nav-item">
+    <a class="nav-link" href="contact.html">Contact Us</a>
+    </li>
+    <!-- <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+    role="button" data-toggle="dropdown"
+    aria-haspopup="true" aria-expanded="false">
+    Dropdown
+    </a>
+    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+    <a class="dropdown-item" href="#">Action</a>
+    <a class="dropdown-item" href="#">Another action</a>
+    <div class="dropdown-divider"></div>
+    <a class="dropdown-item" href="#">Something else here</a>
+    </div>
+    </li> -->
+    </ul>
+    <div class="search mr-3">
+    <a href="search.html" class="btn btn-sm btn-outline-primary">
+    Search
+    </a>
+    </div>
+    <div class="cart">
+    <a href="cart.html">
+    <i class="fas fa-shopping-cart fa-2x"></i>
+    <span class="badge badge-pill badge-primary">24</span>
+    </a>
+    </div>
+    </div>
+    </nav>
+    </div>
+    </section>
+    <!-- ==============header menu section ends here============== -->
+
+    <!-- ==============slider menu section  here============== -->
+
+    <!-- ============== carousel section starts here============== -->
+<section class="header_carousel" id="header_carousel">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner" >
+    <div class="carousel-item active">
+    <img class="d-block w-100" style="height: 500px;"
+    src="/assets/image0.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+    <img class="d-block w-100" style="height: 500px;"
+    src="/assets/image2.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+    <img class="d-block w-100" style="height: 500px;"
+    src="/assets/image3.png" alt="Third slide">
+    </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+    data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button"
+    data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+    </a>
+    </div>
+    </section>
+    <!-- ============== carousel section starts here============== -->
+   
+    <!-- ==============slider menu end section  here============== -->
+
+    <!-- ==============shop by category starts here============== -->
+<section class="shop_by_category py-5 my-5" id="shop_by_category">
+    <div class="container-fluid">
+    <div class="section_title text-center mb-5">
+    <h1 class="text-capitalize">Shop By category</h1>
+    </div>
+    <div class="row">
+    <div class="col-md-4 col-12">
+    <div class="card bg-dark text-white">
+    <a href="category.html">
+    <img class="card-img img img-fluid" src="/assets/shop1.png"
+    alt="Card image">
+    </a>
+    </div>
+    </div>
+    <div class="col-md-4 col-12 mt-small-5 mb-small-5">
+    <div class="card bg-dark text-white">
+    <a href="category.html">
+    <img class="card-img img img-fluid" src="/assets/shop2.png"
+    alt="Card image">
+    </a>
+    </div>
+    </div>
+    <div class="col-md-4 col-12">
+    <div class="card bg-dark text-white">
+    <a href="category.html">
+    <img class="card-img img img-fluid" src="/assets/shop.png"
+    alt="Card image">
+    </a>
+    </div>
+    </div>
+    </div>
+    </div>
+    </section>
+    <!-- ==============shop by category ends here============== -->
+
+
+  <!-- ==============products starts here============== -->
+<section class="products py-5 my-5 bg-light" id="products">
+    <div class="container ">
+    <div class="section_title text-center mb-5">
+    <h1 class="text-capitalize">Latest Products</h1>
+    </div>
+    <div class="row mb-5">
+    <div class="col-md-4 col-12">
+    <div class="single_product shadow text-center p-1">
+    <div class="product_img">
+    <a href="assets/shop2.png"><img src="/assets/shop2.png"
+    class="img img-fluid" alt=""></a>
+    <div class="new_product">
+    <span class="badge py-2 px-3 badge-pill badge-danger">New</span>
+    </div>
+    </div>
+    <div class="product-caption my-3">
+    <div class="product-ratting">
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star"></span>
+    </div>
+    <h4><a href="product_detail.html">Green Dress with details</a></h4>
+    <div class="price">
+    <b><span class="mr-1">₹</span><span>400</span></b>
+    </div>
+    </div>
+    </div>
+    </div>
+    <div class="col-md-4 col-12">
+    <div class="single_product shadow text-center p-1 mt-small-5 mb-small-5">
+    <div class="product_img">
+    <a href="product_detail.html"><img src="assets/image2.jpg"
+    class="img img-fluid" alt=""></a>
+    <div class="new_product">
+    <span class="badge py-2 px-3 badge-pill badge-danger">New</span>
+    </div>
+    </div>
+    <div class="product-caption my-3">
+    <div class="product-ratting">
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star"></span>
+    </div>
+    <h4><a href="product_detail.html">Green Dress with details</a></h4>
+    <div class="price">
+    <b><span class="mr-1">₹</span><span>400</span></b>
+    </div>
+    </div>
+    </div>
+    </div>
+    <div class="col-md-4 col-12">
+    <div class="single_product shadow text-center p-1">
+    <div class="product_img">
+    <a href="product_detail.html"><img src="assets/shop.png"
+    class="img img-fluid" alt=""></a>
+    <div class="new_product">
+    <span class="badge py-2 px-3 badge-pill badge-danger">New</span>
+    </div>
+    </div>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star"></span>
+    </div>
+    <h4><a href="product_detail.html">Green Dress with details</a></h4>
+    <div class="price">
+    <b><span class="mr-1">₹</span><span>400</span></b>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    <div class="row">
+    <div class="col-md-4 col-12">
+    <div class="single_product shadow text-center p-1">
+    <div class="product_img">
+    <a href="product_detail.html"><img src="assets/shop1.png"
+    class="img img-fluid" alt=""></a>
+    <div class="new_product">
+    <span class="badge py-2 px-3 badge-pill badge-danger">New</span>
+    </div>
+    </div>
+    <div class="product-caption my-3">
+    <div class="product-ratting">
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star"></span>
+    </div>
+    <h4><a href="product_detail.html">Green Dress with details</a></h4>
+    <div class="price">
+    <b><span class="mr-1">₹</span><span>400</span></b>
+    </div>
+    </div>
+    </div>
+    </div>
+    <div class="col-md-4 col-12">
+    <div class="single_product shadow text-center p-1 mt-small-5 mb-small-5">
+    <div class="product_img">
+    <a href="product_detail.html"><img src="assets/shop2.png"
+    class="img img-fluid" alt=""></a>
+    <div class="new_product">
+    <span class="badge py-2 px-3 badge-pill badge-danger">New</span>
+    </div>
+    </div>
+    <div class="product-caption my-3">
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star"></span>
+    </div>
+    <h4><a href="product_detail.html">Green Dress with details</a></h4>
+    <div class="price">
+    <b><span class="mr-1">₹</span><span>400</span></b>
+    </div>
+    </div>
+    </div>
+    </div>
+    <div class="col-md-4 col-12">
+    <div class="single_product shadow text-center p-1">
+    <div class="product_img">
+    <a href="product_detail.html"><img src="assets/shop3.png"
+    class="img img-fluid" alt=""></a>
+    <div class="new_product">
+    <span class="badge py-2 px-3 badge-pill badge-danger">New</span>
+    </div>
+    </div>
+    <div class="product-caption my-3">
+    <div class="product-ratting">
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star"></span>
+    </div>
+    <h4><a href="product_detail.html">Green Dress with details</a></h4>
+    <div class="price">
+    <b><span class="mr-1">₹</span><span>400</span></b>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </section>
+    <!-- ==============products ends here============== -->
+
+    <!-- ==============feature starts here============== -->
+<section class="feature py-5 mt-5" id="feature">
+    <div class="container">
+    <div class="section_title text-center mb-5">
+    <h1 class="text-capitalize">Our Features</h1>
+    </div>
+
+    <div class="row text-black">
+    <div class="col-md-4 col-12 shadow p-3">
+    <div class="text-center">
+    <div class="mb-4">
+    <i class="fas fa-shipping-fast fa-3x mb-3 pt-2"></i>
+    <div>
+    <h3>Free Shipping Method</h3>
+    </div>
+    </div>
+    <div>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos impedit id
+    accusamus quas maxime
+    expedita nostrum atque delectus deleniti ad modi repellat debitis ipsam
+    quisquam amet, odit voluptate
+    recusandae distinctio? Perferendis tenetur quibusdam porro dolor dignissimos
+    id magnam debitis vitae?
+    </div>
+    </div>
+    </div>
+    <div class="col-md-4 col-12 shadow p-3 mt-small-5 mb-small-5">
+    <div class="text-center">
+    <div class="mb-4">
+    <!-- <i class="fas fa-lock fa-3x mb-3 pt-2"></i> -->
+    <div>
+    <h3>Secure Payment System</h3>
+    </div>
+    </div>
+    <div>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos impedit id
+    accusamus quas maxime
+    expedita nostrum atque delectus deleniti ad modi repellat debitis ipsam
+    quisquam amet, odit voluptate
+    recusandae distinctio? Perferendis tenetur quibusdam porro dolor dignissimos
+    id magnam debitis vitae?
+    </div>
+    </div>
+    </div>
+    <div class="col-md-4 col-12 shadow p-3">
+    <div class="text-center">
+    <div class="mb-4">
+    <!-- <i class="fas fa-headphones fa-3x mb-3 pt-2"></i> -->
+    <div>
+    <h3>24/7 Support</h3>
+    </div>
+    </div>
+    <div>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos impedit id
+    accusamus quas maxime
+    expedita nostrum atque delectus deleniti ad modi repellat debitis ipsam
+    quisquam amet, odit voluptate
+    recusandae distinctio? Perferendis tenetur quibusdam porro dolor dignissimos
+    id magnam debitis vitae?
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </section>
+    <!-- ==============feature ends here============== -->
+
+
+    <!-- ==============footer starts here============== -->
+<section class="footer_section pt-5 pb-2" id="footer_section">
+    <footer>
+    <div class="container-fluid">
+    <div class="row">
+    <div class="col-md-3 col-6 pl-5 pl-small-15">
+    <div class="footer_title">
+    <a href="index.html"><img src="assets/images/logo.png" width="150px"
+    class="img img-fluid" alt="logo"></a>
+    </div>
+    <div>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, totam est
+    illum ipsum quas ad
+    dignissimos magni veritatis natus voluptatem.
+    </div>
+    </div>
+    <div class="col-md-3 col-6">
+    <div class="footer_title pt-3 mb-3">
+    <h3>Quick Links</h3>
+    </div>
+    <div class="footer_links">
+    <ul>
+    <li><a href="about.html">About</a></li>
+    <li><a href="javascript:;">Offers & Discounts</a></li>
+    <li><a href="javascript:;">Get Coupon</a></li>
+    <li><a href="contact.html">Contact Us</a></li>
+    </ul>
+    </div>
+    </div>
+    <div class="col-md-3 col-6">
+    <div class="footer_title pt-3 mb-3">
+    <h3>New Products</h3>
+    </div>
+    <div class="footer_links">
+    <ul>
+    <li><a href="javascript:;">Woman Cloth</a></li>
+    <li><a href="javascript:;">Fashion Accessories</a></li>
+    <li><a href="javascript:;">Man Accessories</a></li>
+    <li><a href="javascript:;">Rubber made Toys</a></li>
+    </ul>
+    </div>
+    </div>
+    <div class="col-md-3 col-6">
+    <div class="footer_title pt-3 mb-3">
+    <h3>Support</h3>
+    </div>
+    <div class="footer_links">
+    <ul>
+    <li><a href="javascript:;">Frequently Asked Questions</a></li>
+    <li><a href="javascript:;">Terms & Conditions</a></li>
+    <li><a href="javascript:;">Privacy Policy</a></li>
+    <li><a href="javascript:;">Report a Payment Issue</a></li>
+    </ul>
+    </div>
+    </div>
+    </div>
+    </div>
+    <div class="border-top">
+    <h6 class="text-center mt-3">Copyright ©2020 All rights reserved
+    </h6>
+    </div>
+    </footer>
+    </section>
+    <div class="backtop">
+    <a id="button" href="#top" class="btn btn-lg btn-outline-danger" role="button">
+    <i class="fas fa-chevron-up text-dark"></i>
+    </a>
+    </div>
+    <!-- ==============footer ends here============== -->
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  </body>
 </html>
