done with all product pages

--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@ integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEys
 h0TCVbHJXCLN7WetD8TFecIky75ZfQ=="
 crossorigin="anonymous" />
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous"
+referrerpolicy="no-referrer" />
+
 <link rel="stylesheet" href="style.css">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Hello, world!</title>
+    <title>home</title>
   </head>
   <body>
 
@@ -28,8 +31,11 @@ crossorigin="anonymous" />
     <div class="container-fluid px-0 shadow">
     <nav class="navbar navbar-expand-lg navbar-light bg-light py-3 ">
     <a class="navbar-brand pl-5 pl-small-0" href="index.html">
-    <img src="assets/logo.jpg" class="img img-fluid" width="50px"
-    alt="logo">
+    <!-- <img src="assets/logo.jpg" class="img img-fluid" width="50px"
+    alt="logo"> -->
+    <div class="logo" style="font-size: larger;">
+        <i class="fa-brands fa-free-code-camp"></i>
+    </div>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
     data-target="#navbarSupportedContent"
@@ -94,7 +100,7 @@ crossorigin="anonymous" />
     <div class="carousel-inner" >
     <div class="carousel-item active">
     <img class="d-block w-100" style="height: 500px;"
-    src="/assets/image0.jpg" alt="First slide">
+    src="/assets/shop.png" alt="First slide">
     </div>
     <div class="carousel-item">
     <img class="d-block w-100" style="height: 500px;"
@@ -342,7 +348,7 @@ crossorigin="anonymous" />
     <div class="col-md-4 col-12 shadow p-3 mt-small-5 mb-small-5">
     <div class="text-center">
     <div class="mb-4">
-    <!-- <i class="fas fa-lock fa-3x mb-3 pt-2"></i> -->
+    <i class="fas fa-lock fa-3x mb-3 pt-2"></i>
     <div>
     <h3>Secure Payment System</h3>
     </div>
@@ -360,7 +366,7 @@ crossorigin="anonymous" />
     <div class="col-md-4 col-12 shadow p-3">
     <div class="text-center">
     <div class="mb-4">
-    <!-- <i class="fas fa-headphones fa-3x mb-3 pt-2"></i> -->
+    <i class="fas fa-headphones fa-3x mb-3 pt-2"></i>
     <div>
     <h3>24/7 Support</h3>
     </div>
@@ -388,8 +394,11 @@ crossorigin="anonymous" />
     <div class="row">
     <div class="col-md-3 col-6 pl-5 pl-small-15">
     <div class="footer_title">
-    <a href="index.html"><img src="assets/images/logo.png" width="150px"
-    class="img img-fluid" alt="logo"></a>
+    <!-- <a href="index.html"><img src="assets/images/logo.png" width="150px"
+    class="img img-fluid" alt="logo"></a> -->
+    <div class="logo" style="font-size: larger;">
+        <i class="fa-brands fa-free-code-camp"></i>
+    </div>
     </div>
     <div>
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, totam est
