--- a/order_confirmation.html
+++ b/order_confirmation.html
@@ -82,144 +82,40 @@ referrerpolicy="no-referrer" />
     <!-- ==============header menu section ends here============== -->
 
 
-
-    <!-- ==============category starts here============== -->
-<section class="products py-5 my-5 bg-light" id="products">
-  <div class="container ">
-  <div class="section_title text-center mb-5">
-  <h1 class="text-capitalize">Categories</h1>
-  </div>
-  <div class="row mb-5">
-  <div class="col-md-4 col-12">
-  <div class="single_product shadow text-center p-1">
-  <div class="product_img">
-  <a href="product.html"><img src="assets/images/category1.jfif"
-  class="img img-fluid rounded"
-  alt=""></a>
-  </div>
-  <div class="product-caption my-3">
-  <h4><a href="product.html">xyz</a></h4>
-  </div>
-  <div class="mt-3">
-  <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ad!
-  </p>
-  </div>
-  </div>
-  </div>
-  <div class="col-md-4 col-12">
-  <div class="single_product shadow text-center p-1 mt-small-5
-  mb-small-5">
-  <div class="product_img">
-  <a href="product.html"><img src="assets/images/category2.jfif"
-  class="img img-fluid rounded"
-  alt=""></a>
-  <div class="new_product">
-  <span class="badge py-2 px-3 badge-pill
-  badge-danger">New</span>
-  </div>
-  </div>
-  <div class="product-caption my-3">
-  <h4><a href="product.html">xyz</a></h4>
-  </div>
-  <div class="mt-3">
-  <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ad!
-  </p>
-  </div>
-  </div>
-  </div>
-  <div class="col-md-4 col-12">
-  <div class="single_product shadow text-center p-1">
-  <div class="product_img">
-  <a href="product.html"><img src="assets/images/category3.jfif"
-  class="img img-fluid rounded"
-  alt=""></a>
-  <div class="new_product">
-  <span class="badge py-2 px-3 badge-pill
-  badge-danger">New</span>
-  </div>
-  </div>
-  <div class="product-caption my-3">
-  <h4><a href="product.html">xyz</a></h4>
-  </div>
-  <div class="mt-3">
-  <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ad!
-  </p>
-  </div>
-  </div>
-  </div>
-  </div>
-  <div class="row">
-  <div class="col-md-4 col-12">
-  <div class="single_product shadow text-center p-1">
-  <div class="product_img">
-  <a href="product.html"><img src="assets/images/category3.jfif"
-  class="img img-fluid rounded"
-  alt=""></a>
-  <div class="new_product">
-  <span class="badge py-2 px-3 badge-pill
-  badge-danger">New</span>
-  </div>
-  </div>
-  <div class="product-caption my-3">
-  <h4><a href="product.html">xyz</a></h4>
-  </div>
-  <div class="mt-3">
-  <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ad!
-  </p>
-  </div>
-  </div>
-  </div>
-  <div class="col-md-4 col-12">
-  <div class="single_product shadow text-center p-1 mt-small-5
-  mb-small-5">
-  <div class="product_img">
-  <a href="product.html"><img src="assets/images/category2.jfif"
-  class="img img-fluid rounded"
-  alt=""></a>
-  <div class="new_product">
-  <span class="badge py-2 px-3 badge-pill
-  badge-danger">New</span>
-  </div>
-  </div>
-  <div class="product-caption my-3">
-  <h4><a href="product.html">xyz</a></h4>
-  </div>
-  <div class="mt-3">
-  <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ad!
-  </p>
-  </div>
-  </div>
-  </div>
-  <div class="col-md-4 col-12">
-  <div class="single_product shadow text-center p-1">
-  <div class="product_img">
-  <a href="product.html"><img src="assets/images/category1.jfif"
-  class="img img-fluid rounded"
-  alt=""></a>
-  </div>
-  <div class="product-caption my-3">
-  <h4><a href="product.html">xyz</a></h4>
-  </div>
-  <div class="mt-3">
-  <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ad!
-  </p>
-  </div>
-  </div>
-  </div>
-  </div>
-  </div>
-  </section>
-  <!-- ==============category ends here============== -->
-
-
-
-
+ <!-- ==============order_confirmation starts here============== -->
+<section class="order_confirmation py-5 my-5" id="order_confirmation">
+    <div class="container ">
+    <div class="section_title text-center mb-5">
+    <h1 class="text-capitalize">order confirmation</h1>
+    </div>
+    <div class="row">
+    <div class="col-md-6 mx-auto text-center">
+    <div>
+    <img src="/assets/success_tick.png" class="img img-fluid" width="200px"
+    alt="image">
+    </div>
+    <div>
+    <h2>Thankyou for your purchase!</h2>
+    <h6>A confirmation email has been sent to
+    <b>xyz@gmail.com</b></h6>
+    <h6><span class="mr-2">Order
+    No:</span><span><b>123123123123</b></span></h6>
+    <h6>
+    <span class="mr-2">Order Status:</span>
+    <span>
+    <b>
+    <span class="badge badge-danger">Pending</span>
+    </b>
+    </span>
+    </h6>
+    <a href="index.html" class="btn btn-primary btn-lg mt-5">Return to
+    Home</a>
+    </div>
+    </div>
+    </div>
+    </div>
+    </section>
+    <!-- ==============order confirmation ends here============== -->
 
        <!-- ==============footer starts here============== -->
 <section class="footer_section pt-5 pb-2" id="footer_section">
