--- a/about.html
+++ b/about.html
@@ -8,6 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous"
+referrerpolicy="no-referrer" />
     <title>about</title>
   </head>
   <body>
@@ -17,8 +20,11 @@
     <div class="container-fluid px-0 shadow">
     <nav class="navbar navbar-expand-lg navbar-light bg-light py-3 ">
     <a class="navbar-brand pl-5 pl-small-0" href="index.html">
-    <img src="assets/images/logo.png" class="img img-fluid" width="120px"
-    alt="logo">
+    <!-- <img src="assets/images/logo.png" class="img img-fluid" width="120px"
+    alt="logo"> -->
+    <div class="logo" style="font-size: larger;">
+      <i class="fa-brands fa-free-code-camp"></i>
+  </div>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
     data-target="#navbarSupportedContent"
