--- a/cart.html
+++ b/cart.html
@@ -82,143 +82,175 @@ referrerpolicy="no-referrer" />
     <!-- ==============header menu section ends here============== -->
 
 
-
-    <!-- ==============category starts here============== -->
-<section class="products py-5 my-5 bg-light" id="products">
-  <div class="container ">
-  <div class="section_title text-center mb-5">
-  <h1 class="text-capitalize">Categories</h1>
-  </div>
-  <div class="row mb-5">
-  <div class="col-md-4 col-12">
-  <div class="single_product shadow text-center p-1">
-  <div class="product_img">
-  <a href="product.html"><img src="assets/images/category1.jfif"
-  class="img img-fluid rounded"
-  alt=""></a>
-  </div>
-  <div class="product-caption my-3">
-  <h4><a href="product.html">xyz</a></h4>
-  </div>
-  <div class="mt-3">
-  <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ad!
-  </p>
-  </div>
-  </div>
-  </div>
-  <div class="col-md-4 col-12">
-  <div class="single_product shadow text-center p-1 mt-small-5
-  mb-small-5">
-  <div class="product_img">
-  <a href="product.html"><img src="assets/images/category2.jfif"
-  class="img img-fluid rounded"
-  alt=""></a>
-  <div class="new_product">
-  <span class="badge py-2 px-3 badge-pill
-  badge-danger">New</span>
-  </div>
-  </div>
-  <div class="product-caption my-3">
-  <h4><a href="product.html">xyz</a></h4>
-  </div>
-  <div class="mt-3">
-  <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ad!
-  </p>
-  </div>
-  </div>
-  </div>
-  <div class="col-md-4 col-12">
-  <div class="single_product shadow text-center p-1">
-  <div class="product_img">
-  <a href="product.html"><img src="assets/images/category3.jfif"
-  class="img img-fluid rounded"
-  alt=""></a>
-  <div class="new_product">
-  <span class="badge py-2 px-3 badge-pill
-  badge-danger">New</span>
-  </div>
-  </div>
-  <div class="product-caption my-3">
-  <h4><a href="product.html">xyz</a></h4>
-  </div>
-  <div class="mt-3">
-  <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ad!
-  </p>
-  </div>
-  </div>
-  </div>
-  </div>
-  <div class="row">
-  <div class="col-md-4 col-12">
-  <div class="single_product shadow text-center p-1">
-  <div class="product_img">
-  <a href="product.html"><img src="assets/images/category3.jfif"
-  class="img img-fluid rounded"
-  alt=""></a>
-  <div class="new_product">
-  <span class="badge py-2 px-3 badge-pill
-  badge-danger">New</span>
-  </div>
-  </div>
-  <div class="product-caption my-3">
-  <h4><a href="product.html">xyz</a></h4>
-  </div>
-  <div class="mt-3">
-  <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ad!
-  </p>
-  </div>
-  </div>
-  </div>
-  <div class="col-md-4 col-12">
-  <div class="single_product shadow text-center p-1 mt-small-5
-  mb-small-5">
-  <div class="product_img">
-  <a href="product.html"><img src="assets/images/category2.jfif"
-  class="img img-fluid rounded"
-  alt=""></a>
-  <div class="new_product">
-  <span class="badge py-2 px-3 badge-pill
-  badge-danger">New</span>
-  </div>
-  </div>
-  <div class="product-caption my-3">
-  <h4><a href="product.html">xyz</a></h4>
-  </div>
-  <div class="mt-3">
-  <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ad!
-  </p>
-  </div>
-  </div>
-  </div>
-  <div class="col-md-4 col-12">
-  <div class="single_product shadow text-center p-1">
-  <div class="product_img">
-  <a href="product.html"><img src="assets/images/category1.jfif"
-  class="img img-fluid rounded"
-  alt=""></a>
-  </div>
-  <div class="product-caption my-3">
-  <h4><a href="product.html">xyz</a></h4>
-  </div>
-  <div class="mt-3">
-  <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ad!
-  </p>
-  </div>
-  </div>
-  </div>
-  </div>
-  </div>
-  </section>
-  <!-- ==============category ends here============== -->
-
-
-
+         <!-- ==============cart starts here============== -->
+<section class="cart py-5 my-5" id="cart">
+    <div class="container ">
+    <div class="section_title text-center mb-5">
+    <h1 class="text-capitalize">Cart</h1>
+    </div>
+    <div class="row bg_cart_1 rounded">
+    <!--Grid column-->
+    <div class="col-md-8 border-right">
+    <!-- Card -->
+    <div class="mb-3">
+    <div class="pt-4">
+    <h5 class="mb-4">Cart (<span>2</span> items)</h5>
+    <div class="row mb-4">
+    <div class="col-md-5 col-lg-3 col-xl-3">
+    <div class="rounded mb-3 mb-md-0">
+    <img class="img-fluid w-100 rounded"
+     
+    src="/assets/shop.png"
+    alt="Sample">
+    </div>
+    </div>
+    <div class="col-md-7 col-lg-9 col-xl-9">
+    <div>
+    <div class="d-flex justify-content-between">
+    <div>
+    <h5>Blue denim shirt</h5>
+    <p class="mb-3 text-muted text-uppercase small">Shirt -
+    blue</p>
+    <p class="mb-2 text-muted text-uppercase small">Color:
+    blue</p>
+    <p class="mb-3 text-muted text-uppercase small">Size:
+    M</p>
+    </div>
+    <div>
+    <div class="mb-0 w-100">
+    <button
+    onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
+    class="btn btn-sm btn-outline-primary">
+    <i class="fas fa-minus"></i>
+    </button>
+    <input class="quantity text-center" min="0" max="10"
+    name="quantity"
+    value="1" type="number">
+    <button
+    onclick="this.parentNode.querySelector('input[type=number]').stepUp()"
+    class="btn btn-sm btn-outline-primary">
+    <i class="fas fa-plus"></i>
+    </button>
+    </div>
+    <small class="form-text text-muted text-center">
+    (Note, 1 piece)
+    </small>
+    </div>
+    </div>
+    <div class="d-flex justify-content-between align-items-center">
+    <div>
+    <a href="javascript:;" type="button"
+    class="small text-uppercase mr-3"><i
+    class="fas fa-trash-alt mr-1"></i> Remove item </a>
+    </div>
+    <p class="mb-0"><span><strong
+    id="summary">₹17.99</strong></span></p
+    class="mb-0">
+    </div>
+    </div>
+    </div>
+    </div>
+    <hr class="mb-4">
+    <div class="row mb-4">
+    <div class="col-md-5 col-lg-3 col-xl-3">
+    <div class="rounded mb-3 mb-md-0">
+    <img class="img-fluid w-100 rounded"
+    src="assets/images/product3.png"
+    alt="Sample">
+    </div>
+    </div>
+    <div class="col-md-7 col-lg-9 col-xl-9">
+    <div>
+    <div class="d-flex justify-content-between">
+    <div>
+    <h5>Red hoodie</h5>
+    <p class="mb-3 text-muted text-uppercase small">Shirt -
+    red</p>
+    <p class="mb-2 text-muted text-uppercase small">Color:
+    red</p>
+    <p class="mb-3 text-muted text-uppercase small">Size:
+    M</p>
+    </div>
+    <div>
+    <div class="mb-0 w-100">
+    <button
+    onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
+    class="btn btn-sm btn-outline-primary">
+    <i class="fas fa-minus"></i>
+    </button>
+    <input class="quantity text-center" min="0" max="10"
+    name="quantity"
+    value="1" type="number">
+    <button
+    onclick="this.parentNode.querySelector('input[type=number]').stepUp()"
+    class="btn btn-sm btn-outline-primary">
+    <i class="fas fa-plus"></i>
+    </button>
+    </div>
+    </div>
+    </div>
+    <div class="d-flex justify-content-between align-items-center">
+    <div>
+    <a href="javascript:;" type="button"
+    class="card-link-secondary small text-uppercase mr-3">
+    <i class="fas fa-trash-alt mr-1"></i> Remove item
+    </a>
+    </div>
+    <p class="mb-0"><span><strong>₹35.99</strong></span></p
+    class="mb-0">
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    <!--Grid column-->
+    <!--Grid column-->
+    <div class="col-md-4 rounded">
+    <!-- Card -->
+    <div class="mb-3">
+    <div class="pt-4">
+    <h5 class="mb-3">Order summary</h5>
+    <ul class="list-group list-group-flush">
+    <li
+    class="list-group-item d-flex justify-content-between
+    align-items-center border-0 px-0 pb-2">
+    <span>Product name 1</span>
+    <span>x2</span>
+    <span>₹25.98</span>
+    </li>
+    <li
+    class="list-group-item d-flex justify-content-between
+    align-items-center border-0 px-0 pb-2">
+    <span>Product name 2</span>
+    <span>x2</span>
+    <span>₹25.98</span>
+    </li>
+    <li
+    class="list-group-item d-flex justify-content-between
+    align-items-center border-top px-0 mb-3">
+    <div>
+    <strong>Total amount</strong>
+    <strong>
+    <p class="mb-0">(including VAT)</p>
+    </strong>
+    </div>
+    <span><strong>₹53.98</strong></span>
+    </li>
+    </ul>
+    <a href="checkout.html" class="btn btn-primary btn-block">Go to
+    Checkout</a>
+    </div>
+    </div>
+    <!-- Card -->
+    </div>
+    <!--Grid column-->
+    </div>
+    </div>
+    </section>
+    <!-- ==============cart ends here============== -->
+    
 
 
        <!-- ==============footer starts here============== -->
