--- a/checkout.html
+++ b/checkout.html
@@ -81,144 +81,148 @@ referrerpolicy="no-referrer" />
     </section>
     <!-- ==============header menu section ends here============== -->
 
-
-
-    <!-- ==============category starts here============== -->
-<section class="products py-5 my-5 bg-light" id="products">
-  <div class="container ">
-  <div class="section_title text-center mb-5">
-  <h1 class="text-capitalize">Categories</h1>
-  </div>
-  <div class="row mb-5">
-  <div class="col-md-4 col-12">
-  <div class="single_product shadow text-center p-1">
-  <div class="product_img">
-  <a href="product.html"><img src="assets/images/category1.jfif"
-  class="img img-fluid rounded"
-  alt=""></a>
-  </div>
-  <div class="product-caption my-3">
-  <h4><a href="product.html">xyz</a></h4>
-  </div>
-  <div class="mt-3">
-  <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ad!
-  </p>
-  </div>
-  </div>
-  </div>
-  <div class="col-md-4 col-12">
-  <div class="single_product shadow text-center p-1 mt-small-5
-  mb-small-5">
-  <div class="product_img">
-  <a href="product.html"><img src="assets/images/category2.jfif"
-  class="img img-fluid rounded"
-  alt=""></a>
-  <div class="new_product">
-  <span class="badge py-2 px-3 badge-pill
-  badge-danger">New</span>
-  </div>
-  </div>
-  <div class="product-caption my-3">
-  <h4><a href="product.html">xyz</a></h4>
-  </div>
-  <div class="mt-3">
-  <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ad!
-  </p>
-  </div>
-  </div>
-  </div>
-  <div class="col-md-4 col-12">
-  <div class="single_product shadow text-center p-1">
-  <div class="product_img">
-  <a href="product.html"><img src="assets/images/category3.jfif"
-  class="img img-fluid rounded"
-  alt=""></a>
-  <div class="new_product">
-  <span class="badge py-2 px-3 badge-pill
-  badge-danger">New</span>
-  </div>
-  </div>
-  <div class="product-caption my-3">
-  <h4><a href="product.html">xyz</a></h4>
-  </div>
-  <div class="mt-3">
-  <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ad!
-  </p>
-  </div>
-  </div>
-  </div>
-  </div>
-  <div class="row">
-  <div class="col-md-4 col-12">
-  <div class="single_product shadow text-center p-1">
-  <div class="product_img">
-  <a href="product.html"><img src="assets/images/category3.jfif"
-  class="img img-fluid rounded"
-  alt=""></a>
-  <div class="new_product">
-  <span class="badge py-2 px-3 badge-pill
-  badge-danger">New</span>
-  </div>
-  </div>
-  <div class="product-caption my-3">
-  <h4><a href="product.html">xyz</a></h4>
-  </div>
-  <div class="mt-3">
-  <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ad!
-  </p>
-  </div>
-  </div>
-  </div>
-  <div class="col-md-4 col-12">
-  <div class="single_product shadow text-center p-1 mt-small-5
-  mb-small-5">
-  <div class="product_img">
-  <a href="product.html"><img src="assets/images/category2.jfif"
-  class="img img-fluid rounded"
-  alt=""></a>
-  <div class="new_product">
-  <span class="badge py-2 px-3 badge-pill
-  badge-danger">New</span>
-  </div>
-  </div>
-  <div class="product-caption my-3">
-  <h4><a href="product.html">xyz</a></h4>
-  </div>
-  <div class="mt-3">
-  <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ad!
-  </p>
-  </div>
-  </div>
-  </div>
-  <div class="col-md-4 col-12">
-  <div class="single_product shadow text-center p-1">
-  <div class="product_img">
-  <a href="product.html"><img src="assets/images/category1.jfif"
-  class="img img-fluid rounded"
-  alt=""></a>
-  </div>
-  <div class="product-caption my-3">
-  <h4><a href="product.html">xyz</a></h4>
-  </div>
-  <div class="mt-3">
-  <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ad!
-  </p>
-  </div>
-  </div>
-  </div>
-  </div>
-  </div>
-  </section>
-  <!-- ==============category ends here============== -->
-
-
-
+    <!-- ==============Checkout starts here============== -->
+<section class="Checkout py-5 my-5" id="Checkout">
+    <div class="container ">
+    <div class="section_title text-center mb-5">
+    <h1 class="text-capitalize">Checkout</h1>
+    </div>
+    <div class="row">
+    <!--Grid column-->
+    <div class="col-lg-8">
+    <!-- Card -->
+    <div class="card bg_checkout_1 pb-5">
+    <div class="card-body">
+    <h5 class="mb-5">Billing details</h5>
+    <!-- Grid row -->
+    <div class="row">
+    <!-- Grid column -->
+    <div class="col-lg-6">
+    <!-- First name -->
+    <div class="form-group mb-0 mb-lg-4">
+    <label for="firstName">First name</label>
+    <input type="text" id="firstName" class="form-control mb-0
+    mb-lg-2">
+    </div>
+    </div>
+    <!-- Grid column -->
+    <!-- Grid column -->
+    <div class="col-lg-6">
+    <!-- Last name -->
+    <div class="form-group md-outline">
+    <label for="lastName">Last name</label>
+    <input type="text" id="lastName" class="form-control">
+    </div>
+    </div>
+    <!-- Grid column -->
+    </div>
+    <!-- Grid row -->
+    <!-- Phone -->
+    <div class="form-group">
+    <label for="form18">Phone</label>
+    <input type="number" id="form18" class="form-control">
+    </div>
+    <!-- Email address -->
+    <div class="form-group">
+    <label for="form19">Email address</label>
+    <input type="email" id="form19" class="form-control">
+    </div>
+    <!-- Country -->
+    <div class="d-flex flex-wrap">
+    <div class="w-100">
+    <label>Country</label>
+    <select class="custom-select form-group">
+    <option value="" selected>Choose your option</option>
+    <option value="1">Option 1</option>
+    <option value="2">Option 2</option>
+    <option value="3">Option 3</option>
+    </select>
+    </div>
+    </div>
+    <!-- Address Part 1 -->
+    <div class="form-group">
+    <label for="form14">Address Line 1</label>
+    <input type="text" id="form14" placeholder="House number and
+    street name"
+    class="form-control">
+    </div>
+    <!-- Address Part 2 -->
+    <div class="form-group">
+    <label for="form15">Address Line 2</label>
+    <input type="text" id="form15" placeholder="Apartment, suite, unit
+    etc. (optional)"
+    class="form-control">
+    </div>
+    <!-- Postcode / ZIP -->
+    <div class="form-group">
+    <label for="form16">Postcode / ZIP</label>
+    <input type="text" id="form16" class="form-control">
+    </div>
+    <!-- Town / City -->
+    <div class="form-group">
+    <label for="form17">Town / City</label>
+    <input type="text" id="form17" class="form-control">
+    </div>
+    <!-- Additional information -->
+    <div class="form-group">
+    <label for="form76">Additional information</label>
+    <textarea id="form76" class="md-textarea form-control"
+    rows="4"></textarea>
+    </div>
+    <!-- <button class="btn btn-success"><i class="fa fa-check"></i>
+    Purchase</button> -->
+    <div class="text-center">
+    <a href="order_confirmation.html" class="btn btn-primary">
+    <i class="fa fa-check mr-2"></i>Purchase
+    </a>
+    </div>
+    </div>
+    </div>
+    <!-- Card -->
+    </div>
+    <!--Grid column-->
+    <!--Grid column-->
+    <div class="col-lg-4 bg_checkout_1 h-25 rounded">
+    <!-- Card -->
+    <div class="mb-3">
+    <div class="pt-4">
+    <h5 class="mb-3">Order summary</h5>
+    <ul class="list-group list-group-flush">
+    <li
+    class="list-group-item d-flex justify-content-between
+    align-items-center border-0 px-0 pb-2">
+    <span>Product name 1</span>
+    <span>x2</span>
+    <span>₹25.98</span>
+    </li>
+    <li
+    class="list-group-item d-flex justify-content-between
+    align-items-center border-0 px-0 pb-2">
+    <span>Product name 2</span>
+    <span>x2</span>
+    <span>₹25.98</span>
+    </li>
+    <li
+    class="list-group-item d-flex justify-content-between
+    align-items-center border-top px-0 mb-3">
+    <div>
+    <strong>Total amount</strong>
+    <strong>
+    <p class="mb-0">(including VAT)</p>
+    </strong>
+    </div>
+    <span><strong>₹53.98</strong></span>
+    </li>
+    </ul>
+    </div>
+    </div>
+    <!-- Card -->
+    </div>
+    <!--Grid column-->
+    </div>
+    </div>
+    </section>
+    <!-- ==============Checkout ends here============== -->
 
 
        <!-- ==============footer starts here============== -->
