--- a/product.html
+++ b/product.html
@@ -8,6 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous"
+referrerpolicy="no-referrer" />
     <title>Product</title>
   </head>
   <body>
@@ -17,8 +20,11 @@
     <div class="container-fluid px-0 shadow">
     <nav class="navbar navbar-expand-lg navbar-light bg-light py-3 ">
     <a class="navbar-brand pl-5 pl-small-0" href="index.html">
-    <img src="assets/images/logo.png" class="img img-fluid" width="120px"
-    alt="logo">
+    <!-- <img src="assets/images/logo.png" class="img img-fluid" width="120px"
+    alt="logo"> -->
+    <div class="logo" style="font-size: larger;">
+      <i class="fa-brands fa-free-code-camp"></i>
+  </div>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
     data-target="#navbarSupportedContent"
@@ -75,8 +81,281 @@
     </section>
     <!-- ==============header menu section ends here============== -->
 
+    <section class="products py-5 my-5" id="products">
+      <div class="container ">
+      <div class="section_title text-center mb-5">
+      <h1 class="text-capitalize">Products</h1>
+      </div>
+      <div class="row">
+      <div class="col-md-3 border-right mb-small-5">
+      <h4 class="mb-5 border-bottom">Filters</h4>
+      <div class="mb-5">
+      <label><b>Category</b></label>
+      <ul class="list-group">
+      <li class="list-group-item">Category 1</li>
+      <li class="list-group-item">Category 2</li>
+      <li class="list-group-item">Category 3</li>
+      <li class="list-group-item">Category 4</li>
+      <li class="list-group-item">Category 5</li>
+      </ul>
+      </div>
+      <div>
+      <form>
+      <div class="form-group">
+      <label><b>Price</b></label>
+      <input type="range" min="100" max="1000" step="100"
+      class="form-control-range">
+      </div>
+      </form>
+      <div class="d-flex justify-content-between">
+      <label>₹100</label>
+      <label>₹1000</label>
+      </div>
+      </div>
+      </div>
 
-    <h1>Product</h1>
+      <div class="col-md-9">
+      <div class="row mb-5">
+      <div class="col-md-4 col-12">
+      <div class="single_product shadow text-center p-1">
+      <div class="product_img">
+      <a href="/product-details.html"><img
+      src="/assets/shop1.png" class="img img-fluid"
+      alt=""></a>
+      </div>
+      <div class="product-caption my-3">
+      <div class="product-ratting">
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="far fa-star"></i>
+      <i class="far fa-star"></i>
+      </div>
+      <h5><a href="assets/shop1.png">Green Dress with
+      details</a></h5>
+      <div class="price">
+      <b><span class="mr-1">₹</span><span>400</span></b>
+      </div>
+      </div>
+      </div>
+      </div>
+      <div class="col-md-4 col-12">
+      <div class="single_product shadow text-center p-1 mt-small-5
+      mb-small-5">
+      <div class="product_img">
+        <span class="badge py-2 px-3 badge-pill
+        badge-danger">New</span>
+      <a href="/product-details.html"><img
+      src="assets/shop1.png" class="img img-fluid"
+      alt=""></a>
+      <div class="new_product">
+     
+      </div>
+      </div>
+      <div class="product-caption my-3">
+      <div class="product-ratting">
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="far fa-star"></i>
+      <i class="far fa-star"></i>
+      </div>
+      <h5><a href="assets/shop1.png">Green Dress with
+      details</a></h5>
+      <div class="price">
+      <b><span class="mr-1">₹</span><span>400</span></b>
+      </div>
+      </div>
+      </div>
+      </div>
+
+      <div class="col-md-4 col-12">
+      <div class="single_product shadow text-center p-1">
+      <div class="product_img">
+      <a href="/product-details.html"><img
+      src="assets/images/product3.png" class="img img-fluid"
+      alt=""></a>
+      <div class="new_product">
+      <span class="badge py-2 px-3 badge-pill
+      badge-danger">New</span>
+      </div>
+      </div>
+      <div class="product-caption my-3">
+      <div class="product-ratting">
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="far fa-star"></i>
+      <i class="far fa-star"></i>
+      </div>
+      <h5><a href="/product-details.html">Green Dress with
+      details</a></h5>
+      <div class="price">
+      <b><span class="mr-1">₹</span><span>400</span></b>
+      </div>
+      </div>
+      </div>
+      </div>
+      </div>
+      <div class="row">
+      <div class="col-md-4 col-12">
+      <div class="single_product shadow text-center p-1">
+      <div class="product_img">
+      <a href="product_detail.html"><img
+      src="assets/images/product3.png" class="img img-fluid"
+      alt=""></a>
+      <div class="new_product">
+      <span class="badge py-2 px-3 badge-pill
+      badge-danger">New</span>
+      </div>
+      </div>
+      <div class="product-caption my-3">
+      <div class="product-ratting">
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="far fa-star"></i>
+      <i class="far fa-star"></i>
+      </div>
+      <h5><a href="product_detail.html">Green Dress with
+      details</a></h5>
+      <div class="price">
+      <b><span class="mr-1">₹</span><span>400</span></b>
+      </div>
+      </div>
+      </div>
+      </div>
+      <div class="col-md-4 col-12">
+      <div class="single_product shadow text-center p-1 mt-small-5
+      mb-small-5">
+      <div class="product_img">
+      <a href="product_detail.html"><img
+      src="assets/images/product2.png" class="img img-fluid"
+      alt=""></a>
+      <div class="new_product">
+      <span class="badge py-2 px-3 badge-pill
+      badge-danger">New</span>
+      </div>
+      </div>
+      <div class="product-caption my-3">
+      <div class="product-ratting">
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="far fa-star"></i>
+      <i class="far fa-star"></i>
+      </div>
+      <h5><a href="product_detail.html">Green Dress with
+      details</a></h5>
+      <div class="price">
+      <b><span class="mr-1">₹</span><span>400</span></b>
+      </div>
+      </div>
+      </div>
+      </div>
+      <div class="col-md-4 col-12">
+      <div class="single_product shadow text-center p-1">
+      <div class="product_img">
+      <a href="/assets/shop1.png"><img
+      src="/assets/shop1.png" class="img img-fluid"
+      alt=""></a>
+      </div>
+      <div class="product-caption my-3">
+      <div class="product-ratting">
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="far fa-star"></i>
+      <i class="far fa-star"></i>
+      </div>
+
+      <h5><a href="/assets/shop1.png">Green Dress with
+      details</a></h5>
+      <div class="price">
+      <b><span class="mr-1">₹</span><span>400</span></b>
+      </div>
+      </div>
+      </div>
+      </div>
+      </div>
+      </div>
+      </div>
+      </div>
+      </section>
+      <!-- ==============product ends here============== -->
+         <!-- ==============footer starts here============== -->
+<section class="footer_section pt-5 pb-2" id="footer_section">
+  <footer>
+  <div class="container-fluid">
+  <div class="row">
+  <div class="col-md-3 col-6 pl-5 pl-small-15">
+  <div class="footer_title">
+  <!-- <a href="index.html"><img src="assets/images/logo.png" width="150px"
+  class="img img-fluid" alt="logo"></a> -->
+  <div class="logo" style="font-size: larger;">
+      <i class="fa-brands fa-free-code-camp"></i>
+  </div>
+  </div>
+  <div>
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, totam est
+  illum ipsum quas ad
+  dignissimos magni veritatis natus voluptatem.
+  </div>
+  </div>
+  <div class="col-md-3 col-6">
+  <div class="footer_title pt-3 mb-3">
+  <h3>Quick Links</h3>
+  </div>
+  <div class="footer_links">
+  <ul>
+  <li><a href="about.html">About</a></li>
+  <li><a href="javascript:;">Offers & Discounts</a></li>
+  <li><a href="javascript:;">Get Coupon</a></li>
+  <li><a href="contact.html">Contact Us</a></li>
+  </ul>
+  </div>
+  </div>
+  <div class="col-md-3 col-6">
+  <div class="footer_title pt-3 mb-3">
+  <h3>New Products</h3>
+  </div>
+  <div class="footer_links">
+  <ul>
+  <li><a href="javascript:;">Woman Cloth</a></li>
+  <li><a href="javascript:;">Fashion Accessories</a></li>
+  <li><a href="javascript:;">Man Accessories</a></li>
+  <li><a href="javascript:;">Rubber made Toys</a></li>
+  </ul>
+  </div>
+  </div>
+  <div class="col-md-3 col-6">
+  <div class="footer_title pt-3 mb-3">
+  <h3>Support</h3>
+  </div>
+  <div class="footer_links">
+  <ul>
+  <li><a href="javascript:;">Frequently Asked Questions</a></li>
+  <li><a href="javascript:;">Terms & Conditions</a></li>
+  <li><a href="javascript:;">Privacy Policy</a></li>
+  <li><a href="javascript:;">Report a Payment Issue</a></li>
+  </ul>
+  </div>
+  </div>
+  </div>
+  </div>
+  <div class="border-top">
+  <h6 class="text-center mt-3">Copyright ©2020 All rights reserved
+  </h6>
+  </div>
+  </footer>
+  </section>
+  <div class="backtop">
+  <a id="button" href="#top" class="btn btn-lg btn-outline-danger" role="button">
+  <i class="fas fa-chevron-up text-dark"></i>
+  </a>
+  </div>
+  <!-- ==============footer ends here============== -->
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
