add img transfromation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous"
 referrerpolicy="no-referrer" />
 
-<link rel="stylesheet" href="style.css">
+<!-- <link rel="stylesheet" href="style.css"> -->
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>home</title>
@@ -27,9 +27,9 @@ referrerpolicy="no-referrer" />
 
 
     <!-- ==============header menu section starts here============== -->
-<section class="header_menu" id="header_menu">
-    <div class="container-fluid px-0 shadow">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light py-3 ">
+<section class="header_menu bg-secondary text-white" id="header_menu">
+    <div class="container-fluid px-0 shadow bg-secondary text-white">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
     <a class="navbar-brand pl-5 pl-small-0" href="index.html">
     <!-- <img src="assets/logo.jpg" class="img img-fluid" width="50px"
     alt="logo"> -->
