--- a/order_confirmation.html
+++ b/order_confirmation.html
@@ -83,7 +83,7 @@ referrerpolicy="no-referrer" />
 
 
  <!-- ==============order_confirmation starts here============== -->
-<section class="order_confirmation py-5 my-5" id="order_confirmation">
+<section class="order_confirmation py-5 my-5" id="order_confirmation" style="background-color: yellow;">
     <div class="container ">
     <div class="section_title text-center mb-5">
     <h1 class="text-capitalize">order confirmation</h1>
