--- a/product-details.html
+++ b/product-details.html
@@ -97,32 +97,32 @@ referrerpolicy="no-referrer" />
     <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0"
     class="active">
-    <img src="/assets/shop1.png" class="d-block w-50
+    <img src="/assets/product1.png" class="d-block w-50
     img img-fluid rounded"
     width="15px" alt="image">
     </li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1">
-    <img src="/assets/shop1.png" class="d-block w-50
+    <img src="/assets/product2.jpg" class="d-block w-50
     img img-fluid rounded"
     width="15px" alt="image">
     </li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2">
-    <img src="/assets/shop1.png" class="d-block w-50
+    <img src="/assets/product3.png" class="d-block w-50
     img img-fluid rounded"
     width="15px" alt="image">
     </li>
     </ol>
     <div class="carousel-inner">
     <div class="carousel-item active">
-    <img src="/assets/shop1.png"
+    <img src="/assets/product1.png"
     class="d-block w-100 img img-fluid rounded" alt="image">
     </div>
     <div class="carousel-item">
-    <img src="/assets/shop1.png"
+    <img src="/assets/product2.jpg"
     class="d-block w-100 img img-fluid rounded" alt="image">
     </div>
     <div class="carousel-item">
-    <img src="/assets/shop1.png"
+    <img src="/assets/product3.png"
     class="d-block w-100 img img-fluid rounded" alt="image">
     </div>
     </div>
@@ -208,7 +208,7 @@ referrerpolicy="no-referrer" />
     <div class="col-md-4 col-6">
     <div class="border border-dark rounded shadow text-center p-3">
     <div class="mb-4">
-    <img src="assets/images/product1.png" class="img img-fluid"
+    <img src="assets/product1.png" class="img img-fluid"
     alt="image">
     </div>
     <div>
@@ -221,7 +221,7 @@ referrerpolicy="no-referrer" />
     <div class="col-md-4 col-6">
     <div class="border border-dark rounded shadow text-center p-3">
     <div class="mb-4">
-    <img src="assets/images/product2.png" class="img img-fluid"
+    <img src="/assets/product2.jpg" class="img img-fluid"
     alt="image">
     </div>
     <div>
@@ -234,7 +234,7 @@ referrerpolicy="no-referrer" />
     <div class="col-md-4 col-6">
     <div class="border border-dark rounded shadow text-center p-3">
     <div class="mb-4">
-    <img src="assets/images/product3.png" class="img img-fluid"
+    <img src="assets/product3.png" class="img img-fluid"
     alt="image">
     </div>
     <div>
