--- a/about.html
+++ b/about.html
@@ -11,9 +11,11 @@
     
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous"
 referrerpolicy="no-referrer" />
+
+<link rel="stylesheet" href="style.css">
     <title>about</title>
   </head>
-  <body>
+  <body style="background-color: rgb(154, 213, 215);">
 
 <!-- ==============header menu section starts here============== -->
 <section class="header_menu" id="header_menu">
@@ -82,7 +84,331 @@ referrerpolicy="no-referrer" />
     <!-- ==============header menu section ends here============== -->
 
 
-    <h1>About</h1>
+
+
+    <!-- ==============about starts here============== -->
+<section class="about py-5 my-5" id="about">
+  <div class="container">
+  <div class="section_title text-center mb-5 bg-light">
+  <h1 class="text-capitalize">About Us</h1>
+  </div>
+  <div class="row">
+  <div class="col-md-6">
+  <div class="row">
+  <div class="col-md-12">
+  <img src="assets/mission.jpg" class="img img-fluid rounded
+  shadow-lg"
+  alt="about us image">
+  </div>
+  </div>
+  </div>
+  <div class="col-md-6">
+  <div class="row">
+  <div class="col-md-12">
+  <div class="title">
+  <h3>Our Mission</h3>
+  </div>
+  <div class="about_text mt-sm-5">
+  <p>
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam
+  sed quidem eum
+  molestiae sunt praesentium enim ea magni ipsam aliquid,
+  quibusdam, neque minus
+  necessitatibus maxime quos facere laborum illo. Eaque!
+  </p>
+  <p>
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor nisi
+  natus, rem
+  accusamus sunt numquam debitis et nemo mollitia saepe veniam
+  illo magnam impedit?
+  Odio iure reprehenderit nihil eius quibusdam quisquam, tempora
+  cum asperiores
+  similique sequi rem, exercitationem perspiciatis non!
+  </p>
+  <p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+  provident odio
+  tempora natus et consequatur distinctio, minima, porro libero
+  officia, eos
+  voluptatibus ad dolore expedita repudiandae. Vel exercitationem
+  corrupti rem nisi,
+  fuga deserunt suscipit minus quisquam voluptatem?
+  </p>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  <div class="row">
+  <!-- ==============testimonial starts here============== -->
+  <section class="text-center bg-info my-5 py-5 rounded">
+  <div class="col-md-10 col-10 mx-auto">
+  <!-- Carousel Wrapper -->
+  <div id="carousel-example-1" class="carousel slide carousel-fade"
+  data-ride="carousel"
+  data-interval="false">
+  <!--Slides-->
+  <div class="carousel-inner">
+  <!--First slide-->
+  <div class="carousel-item active">
+  <div class="testimonial">
+  <!--Avatar-->
+  <div class="avatar mx-auto mb-4">
+  <img src="assets/avatar.png"
+  class="rounded-circle img-fluid"
+  alt="First sample avatar image">
+  </div>
+  <!--Content-->
+  <p>
+  <i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet,
+  consectetur
+  adipisicing
+  elit. Quod
+  eos
+  id officiis hic tenetur quae quaerat ad velit ab. Lorem ipsum
+  dolor sit
+  amet,
+  consectetur
+  adipisicing elit. Dolore cum accusamus eveniet molestias
+  voluptatum
+  inventore
+  laboriosam
+  labore
+  sit, aspernatur praesentium iste impedit quidem dolor
+  veniam.
+  </p>
+  <h4 class="font-weight-bold">Anna Deynah</h4>
+  <h6 class="font-weight-bold my-3">Founder at ET
+  Company</h6>
+  <!--Review-->
+  <i class="fas fa-star blue-text"> </i>
+  <i class="fas fa-star blue-text"> </i>
+  <i class="fas fa-star blue-text"> </i>
+  <i class="fas fa-star blue-text"> </i>
+  <i class="fas fa-star-half-alt blue-text"> </i>
+  </div>
+  </div>
+  <!--First slide-->
+  <!--Second slide-->
+  <div class="carousel-item">
+  <div class="testimonial">
+  <!--Avatar-->
+  <div class="avatar mx-auto mb-4">
+  <img src="assets/avatar.png"
+  class="rounded-circle img-fluid"
+  alt="Second sample avatar image">
+  </div>
+  <!--Content-->
+  <p>
+  <i class="fas fa-quote-left"></i> Nemo enim ipsam
+  voluptatem quia
+  voluptas sit
+  aspernatur aut
+  odit
+  aut fugit, sed quia consequuntur magni dolores eos qui
+  ratione
+  voluptatem sequi
+  nesciunt. Neque
+  porro quisquam est, qui dolorem ipsum quia dolor sit amet,
+  consectetur,
+  adipisci
+  velit,
+  sed quia
+  non numquam eius modi tempora incidunt ut labore. </p>
+  <h4 class="font-weight-bold">Maria Kate</h4>
+  <h6 class="font-weight-bold my-3">Photographer at Studio
+  LA</h6>
+  <!--Review-->
+  <i class="fas fa-star blue-text"> </i>
+  <i class="fas fa-star blue-text"> </i>
+  <i class="fas fa-star blue-text"> </i>
+  <i class="fas fa-star blue-text"> </i>
+  <i class="fas fa-star blue-text"> </i>
+  </div>
+  </div>
+  <!--Second slide-->
+  <!--Third slide-->
+  <div class="carousel-item">
+  <div class="testimonial">
+  <!--Avatar-->
+  <div class="avatar mx-auto mb-4">
+  <img src="assets/avatar.png"
+  class="rounded-circle img-fluid"
+  alt="Third sample avatar image">
+  </div>
+  <!--Content-->
+  <p>
+  <i class="fas fa-quote-left"></i> Duis aute irure dolor in
+  reprehenderit
+  in
+  voluptate
+  velit esse
+  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+  cupidatat non
+  proident,
+  sunt in
+  culpa qui officia deserunt mollit anim id est laborum. Sed ut
+  perspiciatis unde
+  omnis
+  iste natus
+  error sit voluptatem accusantium doloremque
+  laudantium.</p>
+  <h4 class="font-weight-bold">John Doe</h4>
+  <h6 class="font-weight-bold my-3">Front-end Developer in
+  NY</h6>
+  <!--Review-->
+  <i class="fas fa-star blue-text"> </i>
+  <i class="fas fa-star blue-text"> </i>
+  <i class="fas fa-star blue-text"> </i>
+  <i class="fas fa-star blue-text"> </i>
+  <i class="far fa-star blue-text"> </i>
+  </div>
+  </div>
+  <!--Third slide-->
+  </div>
+  <!--Slides-->
+  <!--Controls-->
+  <a class="carousel-control-prev left carousel-control"
+  href="#carousel-example-1"
+  role="button" data-slide="prev">
+  <span class="carousel-control-prev-icon"
+  aria-hidden="true"></span>
+  <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next right carousel-control"
+  href="#carousel-example-1"
+  role="button" data-slide="next">
+  <span class="carousel-control-next-icon"
+  aria-hidden="true"></span>
+  <span class="sr-only">Next</span>
+  </a>
+  <!--Controls-->
+  </div>
+  <!-- Carousel Wrapper -->
+  </div>
+  </section>
+  <!-- ==============testimonial ends here============== -->
+  </div>
+  <div class="row mt-5">
+  <div class="col-md-3 col-6">
+  <div class="border border-dark rounded shadow text-center p-3">
+  <div class="mb-4">
+  <i class="far fa-credit-card fa-3x"></i>
+  </div>
+  <div>
+  <h5>Credit Card Support</h5>
+  </div>
+  </div>
+  </div>
+  <div class="col-md-3 col-6 mt-small-2 mb-small-2">
+  <div class="border border-primary rounded shadow text-center p-3">
+  <div class="mb-4">
+  <i class="fas fa-laptop fa-3x"></i>
+  </div>
+  <div>
+  <h5>Online Order</h5>
+  </div>
+  </div>
+  </div>
+  <div class="col-md-3 col-6">
+  <div class="border border-success rounded shadow text-center p-3">
+  <div class="mb-4">
+  <i class="fas fa-shipping-fast fa-3x"></i>
+  </div>
+  <div>
+  <h5>Fast Delivery</h5>
+  </div>
+  </div>
+  </div>
+  <div class="col-md-3 col-6">
+  <div class="border border-danger rounded shadow text-center p-3">
+  <div class="mb-4">
+  <i class="fas fa-gifts fa-3x"></i>
+  </div>
+  <div>
+  <h5>Product with Gift</h5>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </section>
+  <!-- ==============about ends here============== -->
+
+
+
+      <!-- ==============footer starts here============== -->
+<section class="footer_section pt-5 pb-2" id="footer_section">
+  <footer>
+  <div class="container-fluid">
+  <div class="row">
+  <div class="col-md-3 col-6 pl-5 pl-small-15">
+  <div class="footer_title">
+  <!-- <a href="index.html"><img src="assets/images/logo.png" width="150px"
+  class="img img-fluid" alt="logo"></a> -->
+  <div class="logo" style="font-size: larger;">
+      <i class="fa-brands fa-free-code-camp"></i>
+  </div>
+  </div>
+  <div>
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, totam est
+  illum ipsum quas ad
+  dignissimos magni veritatis natus voluptatem.
+  </div>
+  </div>
+  <div class="col-md-3 col-6">
+  <div class="footer_title pt-3 mb-3">
+  <h3>Quick Links</h3>
+  </div>
+  <div class="footer_links">
+  <ul>
+  <li><a href="about.html">About</a></li>
+  <li><a href="javascript:;">Offers & Discounts</a></li>
+  <li><a href="javascript:;">Get Coupon</a></li>
+  <li><a href="contact.html">Contact Us</a></li>
+  </ul>
+  </div>
+  </div>
+  <div class="col-md-3 col-6">
+  <div class="footer_title pt-3 mb-3">
+  <h3>New Products</h3>
+  </div>
+  <div class="footer_links">
+  <ul>
+  <li><a href="javascript:;">Woman Cloth</a></li>
+  <li><a href="javascript:;">Fashion Accessories</a></li>
+  <li><a href="javascript:;">Man Accessories</a></li>
+  <li><a href="javascript:;">Rubber made Toys</a></li>
+  </ul>
+  </div>
+  </div>
+  <div class="col-md-3 col-6">
+  <div class="footer_title pt-3 mb-3">
+  <h3>Support</h3>
+  </div>
+  <div class="footer_links">
+  <ul>
+  <li><a href="javascript:;">Frequently Asked Questions</a></li>
+  <li><a href="javascript:;">Terms & Conditions</a></li>
+  <li><a href="javascript:;">Privacy Policy</a></li>
+  <li><a href="javascript:;">Report a Payment Issue</a></li>
+  </ul>
+  </div>
+  </div>
+  </div>
+  </div>
+  <div class="border-top">
+  <h6 class="text-center mt-3">Copyright ©2020 All rights reserved
+  </h6>
+  </div>
+  </footer>
+  </section>
+  <div class="backtop">
+  <a id="button" href="#top" class="btn btn-lg btn-outline-danger" role="button">
+  <i class="fas fa-chevron-up text-dark"></i>
+  </a>
+  </div>
+  <!-- ==============footer ends here============== -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
