--- a/cart.html
+++ b/cart.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+     <link rel="stylesheet" href="style.css">
     
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous"
 referrerpolicy="no-referrer" />
@@ -88,7 +89,7 @@ referrerpolicy="no-referrer" />
     <div class="section_title text-center mb-5">
     <h1 class="text-capitalize">Cart</h1>
     </div>
-    <div class="row bg_cart_1 rounded">
+    <div class="row bg_cart_1 rounded cart-bg">
     <!--Grid column-->
     <div class="col-md-8 border-right">
     <!-- Card -->
@@ -100,7 +101,7 @@ referrerpolicy="no-referrer" />
     <div class="rounded mb-3 mb-md-0">
     <img class="img-fluid w-100 rounded"
      
-    src="/assets/shop.png"
+    src="/assets/product1.png"
     alt="Sample">
     </div>
     </div>
@@ -155,7 +156,7 @@ referrerpolicy="no-referrer" />
     <div class="col-md-5 col-lg-3 col-xl-3">
     <div class="rounded mb-3 mb-md-0">
     <img class="img-fluid w-100 rounded"
-    src="assets/images/product3.png"
+    src="assets/product3.png"
     alt="Sample">
     </div>
     </div>
@@ -163,7 +164,7 @@ referrerpolicy="no-referrer" />
     <div>
     <div class="d-flex justify-content-between">
     <div>
-    <h5>Red hoodie</h5>
+    <h5>Yellow denim shirt</h5>
     <p class="mb-3 text-muted text-uppercase small">Shirt -
     red</p>
     <p class="mb-2 text-muted text-uppercase small">Color:
