--- a/category.html
+++ b/category.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="style.css">
     
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous"
 referrerpolicy="no-referrer" />
@@ -84,16 +85,16 @@ referrerpolicy="no-referrer" />
 
 
     <!-- ==============category starts here============== -->
-<section class="products py-5 my-5 bg-light" id="products">
-  <div class="container ">
+<section class="products py-5 my-5" id="products" style="background-color: rgb(163, 163, 206);">
+  <div class="container bg-light">
   <div class="section_title text-center mb-5">
   <h1 class="text-capitalize">Categories</h1>
   </div>
-  <div class="row mb-5">
+  <div class="row mb-5 bg-danger-subtle">
   <div class="col-md-4 col-12">
   <div class="single_product shadow text-center p-1">
   <div class="product_img">
-  <a href="product.html"><img src="assets/images/category1.jfif"
+  <a href="product.html"><img src="assets/category1.png"
   class="img img-fluid rounded"
   alt=""></a>
   </div>
@@ -111,7 +112,7 @@ referrerpolicy="no-referrer" />
   <div class="single_product shadow text-center p-1 mt-small-5
   mb-small-5">
   <div class="product_img">
-  <a href="product.html"><img src="assets/images/category2.jfif"
+  <a href="product.html"><img src="assets/category2.png"
   class="img img-fluid rounded"
   alt=""></a>
   <div class="new_product">
@@ -132,7 +133,7 @@ referrerpolicy="no-referrer" />
   <div class="col-md-4 col-12">
   <div class="single_product shadow text-center p-1">
   <div class="product_img">
-  <a href="product.html"><img src="assets/images/category3.jfif"
+  <a href="product.html"><img src="assets/category3.png"
   class="img img-fluid rounded"
   alt=""></a>
   <div class="new_product">
@@ -155,7 +156,7 @@ referrerpolicy="no-referrer" />
   <div class="col-md-4 col-12">
   <div class="single_product shadow text-center p-1">
   <div class="product_img">
-  <a href="product.html"><img src="assets/images/category3.jfif"
+  <a href="product.html"><img src="assets/category4.png"
   class="img img-fluid rounded"
   alt=""></a>
   <div class="new_product">
@@ -177,7 +178,7 @@ referrerpolicy="no-referrer" />
   <div class="single_product shadow text-center p-1 mt-small-5
   mb-small-5">
   <div class="product_img">
-  <a href="product.html"><img src="assets/images/category2.jfif"
+  <a href="product.html"><img src="assets/category1.png"
   class="img img-fluid rounded"
   alt=""></a>
   <div class="new_product">
@@ -198,7 +199,7 @@ referrerpolicy="no-referrer" />
   <div class="col-md-4 col-12">
   <div class="single_product shadow text-center p-1">
   <div class="product_img">
-  <a href="product.html"><img src="assets/images/category1.jfif"
+  <a href="product.html"><img src="assets/category2.png"
   class="img img-fluid rounded"
   alt=""></a>
   </div>
