--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@ referrerpolicy="no-referrer" />
 
     <title>Contact</title>
   </head>
-  <body>
+  <body class="bg-danger-subtle text-danger-emphasis">
 
 <!-- ==============header menu section starts here============== -->
 <section class="header_menu" id="header_menu">
@@ -81,18 +81,150 @@ referrerpolicy="no-referrer" />
     </section>
     <!-- ==============header menu section ends here============== -->
 
+              <!-- ==============contact starts here============== -->
+<section class="contact py-5 my-5 bg-warning" id="contact">
+  <div class="container">
+  <div class="section_title text-center mb-5 bg-light">
+  <h1 class="text-capitalize">Contact Us</h1>
+  </div>
+  <div class="row mb-5">
+  <div class="col-md-4 col-12">
+  <div class="border border-success rounded shadow text-center p-3">
+  <div class="mb-4">
+  <i class="fas fa-phone-alt fa-3x"></i>
+  </div>
+  <div>
+  <h3>Let's Talk</h3>
+  <p><b>Phone:</b> +91-9876543210</p>
+  </div>
+  </div>
+  </div>
+  <div class="col-md-4 col-12">
+  <div class="border border-success rounded shadow text-center p-3">
+  <div class="mb-4">
+  <i class="fas fa-envelope-open fa-3x"></i>
+  </div>
+  <div>
+  <h3>Drop a Line</h3>
+  <p><b>Email:</b> xyz@gmail.com</p>
+  </div>
+  </div>
+  </div>
+  <div class="col-md-4 col-12">
+  <div class="border border-success rounded shadow text-center p-3">
+  <div class="mb-4">
+  <i class="far fa-life-ring fa-3x"></i>
+  </div>
+  <div>
+  <h3>24x7 Support</h3>
+  <p><b>Customer:</b> 1800 101 303</p>
+  </div>
+  </div>
+  </div>
+  </div>
+  <div class="row">
+  <div class="col-md-8 col-10 mx-auto mb-3 my-5 py-5 border shadow">
+  <h3 class="text-center mb-3">Form</h3>
+  <form action="contact.html" method="POST" id="form">
+  <div class="form-group">
+  <label>Name</label>
+  <input name="name" id="name" type="text" placeholder="Name"
+  class="form-control">
+  </div>
+  <div class="form-group">
+  <label>Email address</label>
+  <input name="email" id="email" type="email" placeholder="Email"
+  class="form-control">
+  </div>
+  <div class="form-group">
+  <label>Message</label>
+  <textarea name="msg" id="msg" class="form-control"
+  placeholder="Message"></textarea>
+  </div>
+  <button type="submit" class="btn btn-primary
+  btn-block">Submit</button>
+  </form>
+  </div>
+  </div>
+  </div>
+  </section>
+  <!-- ==============contact ends here============== -->
 
 
 
 
-
-
-
-
-
-    
-
-    <h1>content Us</h1>
+     <!-- ==============footer starts here============== -->
+<section class="footer_section pt-5 pb-2" id="footer_section">
+  <footer>
+  <div class="container-fluid">
+  <div class="row">
+  <div class="col-md-3 col-6 pl-5 pl-small-15">
+  <div class="footer_title">
+  <!-- <a href="index.html"><img src="assets/images/logo.png" width="150px"
+  class="img img-fluid" alt="logo"></a> -->
+  <div class="logo" style="font-size: larger;">
+      <i class="fa-brands fa-free-code-camp"></i>
+  </div>
+  </div>
+  <div>
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, totam est
+  illum ipsum quas ad
+  dignissimos magni veritatis natus voluptatem.
+  </div>
+  </div>
+  <div class="col-md-3 col-6">
+  <div class="footer_title pt-3 mb-3">
+  <h3>Quick Links</h3>
+  </div>
+  <div class="footer_links">
+  <ul>
+  <li><a href="about.html">About</a></li>
+  <li><a href="javascript:;">Offers & Discounts</a></li>
+  <li><a href="javascript:;">Get Coupon</a></li>
+  <li><a href="contact.html">Contact Us</a></li>
+  </ul>
+  </div>
+  </div>
+  <div class="col-md-3 col-6">
+  <div class="footer_title pt-3 mb-3">
+  <h3>New Products</h3>
+  </div>
+  <div class="footer_links">
+  <ul>
+  <li><a href="javascript:;">Woman Cloth</a></li>
+  <li><a href="javascript:;">Fashion Accessories</a></li>
+  <li><a href="javascript:;">Man Accessories</a></li>
+  <li><a href="javascript:;">Rubber made Toys</a></li>
+  </ul>
+  </div>
+  </div>
+  <div class="col-md-3 col-6">
+  <div class="footer_title pt-3 mb-3">
+  <h3>Support</h3>
+  </div>
+  <div class="footer_links">
+  <ul>
+  <li><a href="javascript:;">Frequently Asked Questions</a></li>
+  <li><a href="javascript:;">Terms & Conditions</a></li>
+  <li><a href="javascript:;">Privacy Policy</a></li>
+  <li><a href="javascript:;">Report a Payment Issue</a></li>
+  </ul>
+  </div>
+  </div>
+  </div>
+  </div>
+  <div class="border-top">
+  <h6 class="text-center mt-3">Copyright ©2020 All rights reserved
+  </h6>
+  </div>
+  </footer>
+  </section>
+  <div class="backtop">
+  <a id="button" href="#top" class="btn btn-lg btn-outline-danger" role="button">
+  <i class="fas fa-chevron-up text-dark"></i>
+  </a>
+  </div>
+  <!-- ==============footer ends here============== -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
