--- a/search.html
+++ b/search.html
@@ -7,12 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="style.css">
-
+ 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous"
 referrerpolicy="no-referrer" />
-    <title>Category</title>
+
+    <title>Contact</title>
   </head>
   <body>
 
@@ -42,13 +41,13 @@ referrerpolicy="no-referrer" />
     <li class="nav-item">
     <a class="nav-link" href="product.html">Product</a>
     </li>
-    <li class="nav-item active">
+    <li class="nav-item">
     <a class="nav-link" href="category.html">Category</a>
     </li>
     <li class="nav-item">
     <a class="nav-link" href="about.html">About Us</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item  active">
     <a class="nav-link" href="contact.html">Contact Us</a>
     </li>
     <!-- <li class="nav-item dropdown">
@@ -82,151 +81,86 @@ referrerpolicy="no-referrer" />
     </section>
     <!-- ==============header menu section ends here============== -->
 
-    <!-- ==============Checkout starts here============== -->
-<section class="Checkout py-5 my-5" id="Checkout">
-    <div class="container cart-bg">
-    <div class="section_title text-center mb-5">
-    <h1 class="text-capitalize">Checkout</h1>
+<!-- ==============search section ends here============== -->
+<section class="search_section py-5 my-5" id="search_section">
+    <div class="container">
+    <div class="title text-center mb-5">
+    <h2><i class="far fa-file mr-2"></i>Search</h2>
     </div>
     <div class="row">
-    <!--Grid column-->
-    <div class="col-lg-8">
-    <!-- Card -->
-    <div class="card bg_checkout_1 pb-5 bg-warning-subtle text-warning-emphasis">
-    <div class="card-body">
-    <h5 class="mb-5">Billing details</h5>
-    <!-- Grid row -->
-    <div class="row">
-    <!-- Grid column -->
-    <div class="col-lg-6">
-    <!-- First name -->
-    <div class="form-group mb-0 mb-lg-4">
-    <label for="firstName">First name</label>
-    <input type="text" id="firstName" class="form-control mb-0
-    mb-lg-2">
+    <!-- BEGIN RESULT -->
+    <div class="col-md-10 mx-auto">
+    <!-- BEGIN SEARCH INPUT -->
+    <div class="input-group">
+    <input type="text" class="form-control" value="xyz">
+    <span class="input-group-btn">
+    <button class="btn btn-primary" type="button"><i class="fa
+    fa-search"></i></button>
+    </span>
     </div>
+    <!-- END SEARCH INPUT -->
+    <small>Showing all results matching "xyz"</small>
+    <!-- BEGIN TABLE RESULT -->
+    <div class="table-responsive mt-3">
+    <table class="table table-hover">
+    <tbody class="border-bottom">
+    <tr>
+    <td class="number text-center">1</td>
+    <td class="image"><img src="assets/images/product1.png"
+    width="100px"
+    class="img img-fluid" alt=""></td>
+    <td class="product"><strong>Product 1</strong><br>This is the
+    product description.
+    </td>
+    <td class="rate text-right"><span><i class="fa fa-star"></i><i
+    class="fa fa-star"></i><i class="fa fa-star"></i><i
+    class="fa fa-star"></i><i class="fa
+    fa-star-half-o"></i></span></td>
+    <td class="price text-right">₹350</td>
+    </tr>
+    <tr>
+    <td class="number text-center">2</td>
+    <td class="image"><img src="assets/images/product2.png"
+    width="100px"
+    class="img img-fluid" alt=""></td>
+    <td class="product"><strong>Product 1</strong><br>This is the
+    product description.
+    </td>
+    <td class="rate text-right"><span><i class="fa fa-star"></i><i
+    class="fa fa-star"></i><i class="fa fa-star"></i><i
+    class="fa fa-star"></i><i class="fa
+    fa-star-half-o"></i></span></td>
+    <td class="price text-right">₹350</td>
+    </tr>
+    <tr>
+    <td class="number text-center">3</td>
+    <td class="image"><img src="assets/images/product3.png"
+    width="100px"
+    class="img img-fluid" alt=""></td>
+    <td class="product"><strong>Product 1</strong><br>This is the
+    product description.
+    </td>
+    <td class="rate text-right"><span><i class="fa fa-star"></i><i
+    class="fa fa-star"></i><i class="fa fa-star"></i><i
+    class="fa fa-star"></i><i class="fa
+    fa-star-half-o"></i></span></td>
+    <td class="price text-right">₹350</td>
+    </tr>
+    </tbody>
+    </table>
     </div>
-    <!-- Grid column -->
-    <!-- Grid column -->
-    <div class="col-lg-6">
-    <!-- Last name -->
-    <div class="form-group md-outline">
-    <label for="lastName">Last name</label>
-    <input type="text" id="lastName" class="form-control">
+    <!-- END TABLE RESULT -->
     </div>
-    </div>
-    <!-- Grid column -->
-    </div>
-    <!-- Grid row -->
-    <!-- Phone -->
-    <div class="form-group">
-    <label for="form18">Phone</label>
-    <input type="number" id="form18" class="form-control">
-    </div>
-    <!-- Email address -->
-    <div class="form-group">
-    <label for="form19">Email address</label>
-    <input type="email" id="form19" class="form-control">
-    </div>
-    <!-- Country -->
-    <div class="d-flex flex-wrap">
-    <div class="w-100">
-    <label>Country</label>
-    <select class="custom-select form-group">
-    <option value="" selected>Choose your option</option>
-    <option value="1">Option 1</option>
-    <option value="2">Option 2</option>
-    <option value="3">Option 3</option>
-    </select>
-    </div>
-    </div>
-    <!-- Address Part 1 -->
-    <div class="form-group">
-    <label for="form14">Address Line 1</label>
-    <input type="text" id="form14" placeholder="House number and
-    street name"
-    class="form-control">
-    </div>
-    <!-- Address Part 2 -->
-    <div class="form-group">
-    <label for="form15">Address Line 2</label>
-    <input type="text" id="form15" placeholder="Apartment, suite, unit
-    etc. (optional)"
-    class="form-control">
-    </div>
-    <!-- Postcode / ZIP -->
-    <div class="form-group">
-    <label for="form16">Postcode / ZIP</label>
-    <input type="text" id="form16" class="form-control">
-    </div>
-    <!-- Town / City -->
-    <div class="form-group">
-    <label for="form17">Town / City</label>
-    <input type="text" id="form17" class="form-control">
-    </div>
-    <!-- Additional information -->
-    <div class="form-group">
-    <label for="form76">Additional information</label>
-    <textarea id="form76" class="md-textarea form-control"
-    rows="4"></textarea>
-    </div>
-    <!-- <button class="btn btn-success"><i class="fa fa-check"></i>
-    Purchase</button> -->
-    <div class="text-center">
-    <a href="order_confirmation.html" class="btn btn-primary">
-    <i class="fa fa-check mr-2"></i>Purchase
-    </a>
-    </div>
-    </div>
-    </div>
-    <!-- Card -->
-    </div>
-    <!--Grid column-->
-    <!--Grid column-->
-    <div class="col-lg-4 bg_checkout_1 h-25 rounded">
-    <!-- Card -->
-    <div class="mb-3">
-    <div class="pt-4">
-    <h5 class="mb-3">Order summary</h5>
-    <ul class="list-group list-group-flush">
-    <li
-    class="list-group-item d-flex justify-content-between
-    align-items-center border-0 px-0 pb-2">
-    <span>Product name 1</span>
-    <span>x2</span>
-    <span>₹25.98</span>
-    </li>
-    <li
-    class="list-group-item d-flex justify-content-between
-    align-items-center border-0 px-0 pb-2">
-    <span>Product name 2</span>
-    <span>x2</span>
-    <span>₹25.98</span>
-    </li>
-    <li
-    class="list-group-item d-flex justify-content-between
-    align-items-center border-top px-0 mb-3">
-    <div>
-    <strong>Total amount</strong>
-    <strong>
-    <p class="mb-0">(including VAT)</p>
-    </strong>
-    </div>
-    <span><strong>₹53.98</strong></span>
-    </li>
-    </ul>
-    </div>
-    </div>
-    <!-- Card -->
-    </div>
-    <!--Grid column-->
+    <!-- END RESULT -->
     </div>
     </div>
     </section>
-    <!-- ==============Checkout ends here============== -->
+    <!-- ==============search section ends here============== -->
+             
 
 
-       <!-- ==============footer starts here============== -->
+
+     <!-- ==============footer starts here============== -->
 <section class="footer_section pt-5 pb-2" id="footer_section">
   <footer>
   <div class="container-fluid">
